--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,12 @@
 		{% endblock %}
 	</head>
 	<body>
+
+	{% include "shared/_navbar.html.twig" %}
+
+	<div class="container my-5">
 		{% block body %}{% endblock %}
+	</div>
+	
 	</body>
 </html>
