--- a/templates/Home/home.html.twig
+++ b/templates/Home/home.html.twig
@@ -9,13 +9,14 @@ Acceuil
     <h2>Nos produits phares</h2>
 
     <div class="row">
-        {% for i in 1..3 %}
+        {% for p in products %}
         <div class="col">
             <div class="card">
-                <img src="https://picsum.photos/200/200" alt="image du produit" class="img-fluid">
+                <img src="{{ p.mainPicture }}" alt="image du produit" class="img-fluid">
                 <div class="card-body">
-                    <h4 class="card-title">Superbe chaise en bois</h4>
-                    <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis, non.</p>
+                    <h4 class="card-title">{{ p.name }} ({{ p.price / 100 }} &euro;)</h4>
+                    <span class="badge badge-info">{{ p.category.name }}</span>
+                    <p class="card-text">{{ p.shortDescription }}</p>
                     <a href="#" class="btn btn-primary btn-sm">Détails</a>
                     <a href="#" class="btn btn-success btn-sm">Ajouter</a>
                 </div>
