--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -9,11 +9,12 @@
 		        <ul class="navbar-nav mr-auto">
 				{% for category in categoryRepository.findAll() %}
 		           	<li class="nav-item">
-		                <a class="nav-link" href="#">{{ category.name }}</a>
+		                <a class="nav-link" href="{{ path('product_category', {'slug': category.slug })}}">{{ category.name }}</a>
 		            </li>
 				{% endfor %}
 		        </ul>
 				<ul class="navbar-nav">
+					<li class="nav-item"><a href="{{ path('cart_show') }}" class="nav-link"><i class="fas fa-shopping-cart"></i> Panier ({{ cartService.total }} €)</a></li>
 					{% if app.user %}
 					<li class="nav-item"><a href="{{ path('security_logout') }}" class="btn btn-danger">Logout</a></li>
 					{% else %}
