--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -14,13 +14,16 @@
 				{% endfor %}
 		        </ul>
 				<ul class="navbar-nav">
-					<li class="nav-item"><a href="{{ path('cart_show') }}" class="nav-link"><i class="fas fa-shopping-cart"></i> Panier ({{ cartService.total }} €)</a></li>
+					<li class="nav-item mr-5"><a href="{{ path('cart_show') }}" class="nav-link"><i class="fas fa-shopping-cart"></i> Panier ({{ cartService.total }} €)</a></li>
+					
 					{% if app.user %}
+					<li class="nav-item"><a href="{{ path('purchase_index')}}" class="nav-link">Mes commandes</a></li>
 					<li class="nav-item"><a href="{{ path('security_logout') }}" class="btn btn-danger">Logout</a></li>
 					{% else %}
 					<li class="nav-item"><a href="#" class="nav-link">Inscription</a></li>
 					<li class="nav-item"><a href="{{ path('security_login') }}" class="btn btn-success">Login</a></li>					
 					{% endif %}
+
 				</ul>
 		    </div>
 		</nav>
