filtre amount-extention

--- a/templates/cart/show.html.twig
+++ b/templates/cart/show.html.twig
@@ -21,14 +21,14 @@
             {% for item in items %}
             <tr>
                 <td>{{ item.product.name }}</td>
-                <td>{{ item.product.price }}</td>
+                <td>{{ item.product.price | amount('$') }}</td>
                 <td>
                     <a href="{{ path('cart_add', {'id': item.product.id }) }}?returnToCart=true" class="btn btn-sm btn-warning mr-2"> <i class="fas fa-plus"></i> </a>
                     {{ item.qty }}
                     <a href="{{ path('cart_decrement', {'id': item.product.id }) }}" class="btn btn-sm btn-warning ml-2"> <i class="fas fa-minus"></i> </a>
 
                 </td>
-                <td>{{ item.total }}</td>
+                <td>{{ item.total | amount }}</td>
                 <td> <a href="{{ path("cart_delete", {'id': item.product.id })}}" class="btn btn-danger">
                 <i class="fas fa-trash"></i></a> </td>
             </tr>
@@ -37,7 +37,7 @@
         <tfoot>
             <tr>
             <td colspan="3">Toral : </td>
-            <td colspan="2">{{ total }}</td>
+            <td colspan="2">{{ total | amount }}</td>
             </tr>
         </tfoot>
     </table>
