--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -13,7 +13,7 @@
 </ol>
 
 <h1>{{ product.name }}
-    ({{ product.price / 100 }}&euro;)
+    ({{ product.price | amount }})
 </h1>
 
 <div class="row">
