--- a/templates/shared/_navbar.html.twig
+++ b/templates/shared/_navbar.html.twig
@@ -14,7 +14,7 @@
 				{% endfor %}
 		        </ul>
 				<ul class="navbar-nav">
-					<li class="nav-item mr-5"><a href="{{ path('cart_show') }}" class="nav-link"><i class="fas fa-shopping-cart"></i> Panier ({{ cartService.total }} €)</a></li>
+					<li class="nav-item mr-5"><a href="{{ path('cart_show') }}" class="nav-link"><i class="fas fa-shopping-cart"></i> Panier ({{ cartService.total | amount }})</a></li>
 					
 					{% if app.user %}
 					<li class="nav-item"><a href="{{ path('purchase_index')}}" class="nav-link">Mes commandes</a></li>
